refactor: 重构测试与恢复链路并建立前后端分离的 Web 控制台骨架