@@ -1,62 +1,115 @@
 package com.indolyn.rill.core.sql;
 
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+
 import com.indolyn.rill.core.catalog.Catalog;
 import com.indolyn.rill.core.exception.SemanticException;
 import com.indolyn.rill.core.model.Column;
 import com.indolyn.rill.core.model.DataType;
 import com.indolyn.rill.core.model.Schema;
+import com.indolyn.rill.core.session.Session;
+import com.indolyn.rill.core.sql.ast.StatementNode;
 import com.indolyn.rill.core.sql.lexer.Lexer;
 import com.indolyn.rill.core.sql.parser.Parser;
-import com.indolyn.rill.core.sql.ast.StatementNode;
 import com.indolyn.rill.core.sql.semantic.SemanticAnalyzer;
-import com.indolyn.rill.core.session.Session;
 import com.indolyn.rill.core.storage.buffer.BufferPoolManager;
 import com.indolyn.rill.core.storage.disk.DiskManager;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.List;
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
-/**
- * @author hidyouth
- * @description: SemanticAnalyzer 类的单元测试 (JUnit 4)
- */
-public class SemanticAnalyzerTest {
+class SemanticAnalyzerTest {
 
-    private final String TEST_DB_FILE = "test_semantic.db";
+    private static final String TEST_DB_FILE = "test_semantic.db";
+
     private DiskManager diskManager;
-    private BufferPoolManager bufferPoolManager;
-    private Catalog catalog;
     private SemanticAnalyzer semanticAnalyzer;
-    private Session mockRootSession;
+    private Session rootSession;
 
-    @Before
-    public void setUp() throws IOException {
+    @BeforeEach
+    void setUp() throws IOException {
         new File(TEST_DB_FILE).delete();
         diskManager = new DiskManager(TEST_DB_FILE);
         diskManager.open();
-        bufferPoolManager = new BufferPoolManager(10, diskManager, "LRU");
-        catalog = new Catalog(bufferPoolManager);
+        BufferPoolManager bufferPoolManager = new BufferPoolManager(10, diskManager, "LRU");
+        Catalog catalog = new Catalog(bufferPoolManager);
         semanticAnalyzer = new SemanticAnalyzer(catalog);
+        rootSession = Session.createAuthenticatedSession(-1, "root");
 
-        // --- 核心修复：在这里初始化模拟的 root session ---
-        mockRootSession = Session.createAuthenticatedSession(-1, "root");
-
-        // 预先创建一张表用于测试
-        Schema schema =
-            new Schema(
-                Arrays.asList(new Column("id", DataType.INT), new Column("name", DataType.VARCHAR)));
-        catalog.createTable("users", schema);
+        catalog.createTable(
+            "users",
+            new Schema(List.of(new Column("id", DataType.INT), new Column("name", DataType.VARCHAR))));
     }
 
-    @After
-    public void tearDown() throws IOException {
-        diskManager.close();
+    @AfterEach
+    void tearDown() throws IOException {
+        if (diskManager != null) {
+            diskManager.close();
+        }
         new File(TEST_DB_FILE).delete();
+    }
+
+    @Test
+    void validStatementsShouldPassSemanticAnalysis() {
+        assertDoesNotThrow(() -> semanticAnalyzer.analyze(parseSql("SELECT id, name FROM users;"), rootSession));
+        assertDoesNotThrow(
+            () -> semanticAnalyzer.analyze(parseSql("SELECT * FROM users WHERE id = 1;"), rootSession));
+        assertDoesNotThrow(
+            () ->
+                semanticAnalyzer.analyze(
+                    parseSql("INSERT INTO users (id, name) VALUES (100, 'test');"), rootSession));
+        assertDoesNotThrow(
+            () -> semanticAnalyzer.analyze(parseSql("DELETE FROM users WHERE name = 'test';"), rootSession));
+    }
+
+    @Test
+    void createExistingTableShouldFail() {
+        assertThrows(
+            SemanticException.class,
+            () -> semanticAnalyzer.analyze(parseSql("CREATE TABLE users (id INT);"), rootSession));
+    }
+
+    @Test
+    void selectingMissingTableShouldFail() {
+        assertThrows(
+            SemanticException.class,
+            () -> semanticAnalyzer.analyze(parseSql("SELECT * FROM non_existent_table;"), rootSession));
+    }
+
+    @Test
+    void selectingMissingColumnShouldFail() {
+        assertThrows(
+            SemanticException.class,
+            () -> semanticAnalyzer.analyze(parseSql("SELECT age FROM users;"), rootSession));
+    }
+
+    @Test
+    void insertingMissingColumnShouldFail() {
+        assertThrows(
+            SemanticException.class,
+            () -> semanticAnalyzer.analyze(parseSql("INSERT INTO users (age) VALUES (30);"), rootSession));
+    }
+
+    @Test
+    void insertingWrongTypeShouldFail() {
+        assertThrows(
+            SemanticException.class,
+            () ->
+                semanticAnalyzer.analyze(
+                    parseSql("INSERT INTO users (id) VALUES ('a string');"), rootSession));
+    }
+
+    @Test
+    void whereClauseTypeMismatchShouldFail() {
+        assertThrows(
+            SemanticException.class,
+            () -> semanticAnalyzer.analyze(parseSql("SELECT * FROM users WHERE name > 123;"), rootSession));
     }
 
     private StatementNode parseSql(String sql) {
@@ -64,93 +117,4 @@ public class SemanticAnalyzerTest {
         Parser parser = new Parser(lexer.tokenize());
         return parser.parse();
     }
-
-    @Test
-    public void testAnalyzeValidStatements() {
-        System.out.println("--- Running test: testAnalyzeValidStatements ---");
-        System.out.println("Goal: Verify that legally correct statements do not throw exceptions.");
-        // 这些都是合法的，不应该抛出异常
-        semanticAnalyzer.analyze(parseSql("SELECT id, name FROM users;"), mockRootSession);
-        semanticAnalyzer.analyze(parseSql("SELECT * FROM users WHERE id = 1;"), mockRootSession);
-        semanticAnalyzer.analyze(
-            parseSql("INSERT INTO users (id, name) VALUES (100, 'test');"), mockRootSession);
-        semanticAnalyzer.analyze(parseSql("DELETE FROM users WHERE name = 'test';"), mockRootSession);
-        System.out.println("Result: Test PASSED.\n");
-    }
-
-    @Test(expected = SemanticException.class)
-    public void testAnalyzeCreateTable_TableExists() {
-        System.out.println("--- Running test: testAnalyzeCreateTable_TableExists ---");
-        System.out.println("Goal: Expect a SemanticException for creating an existing table.");
-        try {
-            // 错误：表已存在
-            semanticAnalyzer.analyze(parseSql("CREATE TABLE users (id INT);"), mockRootSession);
-        } finally {
-            System.out.println("Result: Test threw expected exception.\n");
-        }
-    }
-
-    @Test(expected = SemanticException.class)
-    public void testAnalyzeSelect_TableNotFound() {
-        System.out.println("--- Running test: testAnalyzeSelect_TableNotFound ---");
-        System.out.println("Goal: Expect a SemanticException for selecting from a non-existent table.");
-        try {
-            // 错误：查询一个不存在的表
-            semanticAnalyzer.analyze(parseSql("SELECT * FROM non_existent_table;"), mockRootSession);
-        } finally {
-            System.out.println("Result: Test threw expected exception.\n");
-        }
-    }
-
-    @Test(expected = SemanticException.class)
-    public void testAnalyzeSelect_ColumnNotFound() {
-        System.out.println("--- Running test: testAnalyzeSelect_ColumnNotFound ---");
-        System.out.println("Goal: Expect a SemanticException for selecting a non-existent column.");
-        try {
-            // 错误：查询一个不存在的列
-            semanticAnalyzer.analyze(parseSql("SELECT age FROM users;"), mockRootSession);
-        } finally {
-            System.out.println("Result: Test threw expected exception.\n");
-        }
-    }
-
-    @Test(expected = SemanticException.class)
-    public void testAnalyzeInsert_ColumnNotFound() {
-        System.out.println("--- Running test: testAnalyzeInsert_ColumnNotFound ---");
-        System.out.println(
-            "Goal: Expect a SemanticException for inserting into a non-existent column.");
-        try {
-            // 错误：插入一个不存在的列
-            semanticAnalyzer.analyze(parseSql("INSERT INTO users (age) VALUES (30);"), mockRootSession);
-        } finally {
-            System.out.println("Result: Test threw expected exception.\n");
-        }
-    }
-
-    @Test(expected = SemanticException.class)
-    public void testAnalyzeInsert_TypeMismatch() {
-        System.out.println("--- Running test: testAnalyzeInsert_TypeMismatch ---");
-        System.out.println(
-            "Goal: Expect a SemanticException for inserting a value with mismatched type.");
-        try {
-            // 错误：插入的值类型不匹配
-            semanticAnalyzer.analyze(
-                parseSql("INSERT INTO users (id) VALUES ('a string');"), mockRootSession);
-        } finally {
-            System.out.println("Result: Test threw expected exception.\n");
-        }
-    }
-
-    @Test(expected = SemanticException.class)
-    public void testAnalyzeWhere_TypeMismatch() {
-        System.out.println("--- Running test: testAnalyzeWhere_TypeMismatch ---");
-        System.out.println("Goal: Expect a SemanticException for a type mismatch in the WHERE clause.");
-        try {
-            // 错误：WHERE子句中类型不匹配
-            semanticAnalyzer.analyze(parseSql("SELECT * FROM users WHERE name > 123;"), mockRootSession);
-        } finally {
-            System.out.println("Result: Test threw expected exception.\n");
-        }
-    }
 }
-
